fix: fix call uno command